# ModularProjectTemplate

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: build.yml
cmake/: GenerateMetaInfo.cmake  GenerateQrc.cmake  GitInfo.cmake  PrintTargetProperties.cmake  ReadVersion.cmake  SetOutputPath.cmake  Submodule.cmake  UpdateBuildTime.cmake
res/: meta_info.rc.in
src/: CMakeLists.txt
src/executable/: CMakeLists.txt  executable.cpp
